@startuml
'https://plantuml.com/class-diagram

abstract class AbstractFlyingObject
{
    # locationX:int
    # locationY:int
    # speedX:int
    # speedY:int
    # image:BufferedImage
    # width:int
    # height:int
    # isValid:boolean

    + FlyingObject(int locationX, int locationY, int speedX, int speedY)
    + forward():void
    + crash(FlyingObject flyingObject):boolean
    + setLocation(double locationX, double locationY):void
    + getLocationX():int
    + getLocationY():int
    + getSpeedY():int
    + getImage():BufferedImage
    + getWidth():int
    + getHeight():int
    + notValid():boolean
    + vanish():void
    + update(Game mg):void

}
abstract class AbstractAircraft
{
	# maxHp:int
    # hp:int
    + AbstractAircraft(int locationX, int locationY, int speedX, int speedY, int hp)
    + decreaseHp(int decrease):void
    + recoverHp(int recover):void
    + getHp():int
    + getMaxHp():int
    + setHp(int hp):void
    + {abstract} shoot():List<Bullet>
    + {abstract} setStrategy(Strategy strategy):void
 }

class BaseBullet
{
    - power:int
    + Bullet(int locationX, int locationY, int speedX, int speedY, int power)
    + forward():void
	+ getPower():int
}

AbstractFlyingObject <|-- AbstractAircraft
AbstractFlyingObject <|-- BaseBullet
AbstractFlyingObject <|-- AbstractProps

AbstractAircraft <|-- HeroAircraft
AbstractAircraft <|-- MobEnemy
AbstractAircraft <|-- EliteEnemy
AbstractAircraft <|-- BossEnemy

BaseBullet <|-- HeroBullet
BaseBullet <|-- EnemyBullet
AbstractProps <|-- BloodProps
AbstractProps <|-- BulletProps
AbstractProps <|-- BombProps


class HeroAircraft {
    # maxHp:int
    # hp:int
    - shootNum:int
    - power:int
    - direction:int
    - myHero:HeroAircraft
    - shootStrategy:AbstractShootStrategy
    - HeroAircraft(int locationX, int locationY, int speedX, int speedY, int hp,int shootnum, int power)
    + {static} getInstance(int locationX, int locationY, int speedX, int speedY, int hp,int shootnum, int Aircraft
    + forward():void
    + shoot():List<Bullet>
    + setStrategy(AbstractShootStrategy shootStrategy):void
    + update(Game mg):void
}

class MobEnemy {
    + MobEnemy(int locationX, int locationY, int speedX, int speedY, int hp)
    + forward():void
    + shoot():List<Bullet>
    + update(Game mg):void

}

class EliteEnemy
{

    - direction:int
    - shootNum:int
    - power:int
    - shootStrategy:AbstractShootStrategy
    + EliteEnemy(int locationX, int locationY, int speedX, int speedY, int hp, int shootnum, int power)
    + forward():void
    + shoot():List<Bullet>
    + setStrategy(AbstractShootStrategy shootStrategy):void\
        + update(Game mg):void
}

class BossEnemy
{

    - direction:int
    - shootNum:int
    - power:int
    - shootStrategy:AbstractShootStrategy
    + BossEnemy(int locationX, int locationY, int speedX, int speedY, int hp, int shootnum, int power)
    + forward():void
    + shoot():List<Bullet>
    + setStrategy(AbstractShootStrategy shootStrategy):void
        + update(Game mg):void
}



class HeroBullet {
    + HeroBullet(int locationX, int locationY,
     int speedX, int speedY, int power):void
             + update(Game mg):void
}

class EnemyBullet {
    + EnemyBullet(int locationX, int locationY,
     int speedX, int speedY, int power):void
             + update(Game mg):void
}

abstract class AbstractProps{
    # hp:int
    + AbstractProps(int locationX, int locationY, int speedX, int speedY):void
    + getHp():int
    + setHp():void
    + forward():void
    +{abstract}effectCrash():void
}

class BloodProps
{
+ BloodProps(int locationX, int locationY, int speedX, int speedY)
+ effectCrash():void
}

class BulletProps
{
- mg:Game
+ BulletProps(int locationX, int locationY, int speedX, int speedY,Game game)
+ effectCrash():void
}

class BombProps
{
- mg:Game
- subList:List<AbstractFlyingObject>
+ BombProps(int locationX, int locationY, int speedX, int speedY,Game game)
+ effectCrash():void
+ addList():void
+ notifyList():void

}








@enduml